Your commit message

--- a/src/CountryList.css
+++ b/src/CountryList.css
@@ -12,12 +12,12 @@
   border: 1px solid #ccc;
 }
 
-.countryCard {
+/* .countryCard {
   text-align: center;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
-}
+} */
 
 .flag {
   width: 100px;
